# rag-foundry

./: CHANGELOG.md  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml  deploy-aws.yml  deploy-azure.yml  deploy-gcp.yml
01-hybrid-rag/: README.md
01-hybrid-rag/adr/: ADR-001-choice-of-vector-database.md  ADR-004-frontend-framework.md
02-graph-rag/: README.md
03-agentic-rag-hospital/: README.md
03-agentic-rag-hospital/backend/: Dockerfile  pyproject.toml  requirements.txt
03-agentic-rag-hospital/backend/app/: config.py  main.py  models.py
03-agentic-rag-hospital/backend/app/agents/: __init__.py  graph.py  responder.py  service.py  state.py
03-agentic-rag-hospital/backend/app/retrieval/: dense.py
03-agentic-rag-hospital/backend/app/routers/: __init__.py  health.py  query.py
03-agentic-rag-hospital/backend/tests/: test_auth.py  test_health.py  test_ingestion.py  test_llm.py  test_patients.py  test_query.py  test_retrieval.py
04-corrective-rag/: README.md
05-multimodal-rag/: .gitignore  README.md
05-multimodal-rag/backend/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
05-multimodal-rag/backend/app/: config.py  guardrails.py  ingestion.py  llm.py  main.py  models.py  tasks.py
05-multimodal-rag/backend/app/routers/: ingest.py  query.py
05-multimodal-rag/backend/tests/: test_embedding.py  test_health.py  test_ingestion.py  test_llm.py  test_retrieval.py
rag-architectures/: .gitignore  Makefile  README.md  docker-compose.yml
scripts/: bootstrap-app.sh  run-tests.sh  setup-local.sh
(+357 files in other folders)
